Generación token con JWT

--- a/ForoHub/src/main/resources/application.properties
+++ b/ForoHub/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Flyway
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+jwt.secret=C0ntr4s3n-a1014
+jwt.expiration=3600000  
